--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,7 @@
 == README
 
+REMEMBER TO USE rvm use 2.0.0
+
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
